# rust_app

./: .gitignore  BLACKBOX_README.md  Git Bash.lnk  README.md  WEGE3.csv  main.rs  main.toml
_dados_/: WEGE3_investing_predictions.json
_dados_/infomoney/: SLC Agrícola SLCE3 - Histórico  InfoMoney.csv
_dados_/investing/: WEGE3.csv
arqs_dev/: index.html  notas.toml  notas.txt
arquivosplit/: ARQUIVO 4 GRCP - 2024-04 - V.1.0.csv  Cargo.toml  README.md  arquivosplit.toml
arquivosplit/src/: main.rs
chatbot/: Cargo.toml  README.md
chatbot/dados/: dados.toml
chatbot/src/: main.rs
chatp2p/: Cargo.toml
cnn_reconhece_texto/: Cargo.toml  README.md
cnn_reconhece_texto/dados/: text_classifier.json
cnn_reconhece_texto/src/: main-0-quase.rs  main-01.rs  main-02.rs  main-03.rs  main-04.rs  main.rs
cnncheckin/: Cargo.toml  README.md
cnncheckin/src/: camera.rs  cnn_model.rs  config.rs  database.rs  face_detector.rs  image_processor.rs  main.rs  main_1.rs  utils.rs
conhecimento/: Cargo.toml
cotacaomlp/: Cargo.toml  README.md
cotacaomlp/dados/infomoney/: SLCE3.csv
cotacaomlp/src/: main.rs
cotacaomlp/src/conexao/: read_file.rs
cotacaomlp/src/mlp/: mlp_cotacao.rs  mod.rs  previsao.rs
cotacaomlp/src/mlp/mlp_cotacao/: mod.rs  rna.rs
dados/: CMIG4 Dados Históricos.csv  CMIG4 Dados Históricos_investing_output.toml  CPFE3 Dados Históricos.csv  CPFE3 Dados Históricos_investing_output.toml  DIRR3 Dados Históricos.csv  DIRR3 Dados Históricos_investing_output.toml  EGIE3 Dados Históricos.csv  EGIE3 Dados Históricos_investing_output.toml  ISAE4 Dados Históricos.csv  ISAE4 Dados Históricos_investing_output.toml  ITSA4 Dados Históricos.csv  ITSA4 Dados Históricos_investing_output.toml  PETR4 Dados Históricos.csv  PETR4 Dados Históricos_investing_output.toml  RANI3 Dados Históricos.csv  RANI3 Dados Históricos_investing_output.toml  SLCE3 Dados Históricos.csv  SLCE3 Dados Históricos_investing_output.toml  TAEE11 Dados Históricos.csv  TAEE11 Dados Históricos_investing_output.toml  TAEE4 Dados Históricos.csv  TAEE4 Dados Históricos_investing_output.toml  USIM5 Dados Históricos.csv  USIM5 Dados Históricos_investing_output.toml  VALE3 Dados Históricos.csv  VALE3 Dados Históricos_investing_output.toml  WEGE3 Dados Históricos.csv  WEGE3 Dados Históricos_investing_output.toml  WEGE3_investing.db  WEGE3_investing_lstm_model.json  WEGE3_investing_output.json  WEGE3_investing_output.toml  WEGE3_investing_predictions.json  investing.db
estimulo/: Cargo.toml  README.md  estimulo.db
estimulo/src/: main.rs
estimulo/src/conexao/: conedatabase.rs
estimulo/src/dao/: ai.rs
estimulo/src/exemplos/: codigos.rs  mod.rs
gpt/: Cargo.toml  README.md
lstm_cnn_predictor/: Cargo.toml
lstm_cnn_predictor/src/: main.rs
lstm_cnn_train/: Cargo.toml
lstm_rnn_trainer/: Cargo.toml
lstm_rnn_trainer/src/: main.rs
lstmfilepredict/: Cargo.toml  README.md
lstmfilepredict/src/: main.rs  main_1.rs  main_2.rs
lstmfilepredict/src/rna/: data.rs  mod.rs  model.rs  utils.rs
lstmfiletrain/: Cargo.toml  README.md
lstmfiletrain/src/: main.rs  main_1.rs  main_2.rs  main_3.rs  main_4.rs  main_5.rs
lstmfiletrain/src/neural/: data.rs  metrics.rs  mod.rs  model.rs  storage.rs  utils.rs
lstmfiletrain/src/rna/: data.rs  metrics.rs  mod.rs  model.rs  storage.rs
lstmfilextract/: Cargo.toml  README.md
lstmrnntrain/: Cargo.toml
lstmrnntrain/src/: main.rs
lstmrnntrain/src/neural/: data.rs  metrics.rs  mod.rs  model.rs  storage.rs  utils.rs
mlp/: Cargo.toml  README.md  training_data.db
mlp/dados/: Script-Consulta.sql
mlp/src/: _main.rs.txt  _randomico.rs  gerador-img-mlp.rs  main--.rs  main-1.rs  main-10.rs  main-11.rs  main-12.rs  main-13.rs  main-2.rs  main-3.rs  main-5.rs  main-6.rs  main-7.rs  main-8.rs  main-9.rs  main-fin.rs  main-mlp-xor.rs.txt  main-perfeito-xor.rs  main-xor-02.rs  main-xor-04.rs  main-xor-mlp.rs  main.rs  main.rs.txt  main_.rs.txt  mercado-financ.rs
mlpcotacao/: Cargo.toml  README.md
mlpcotacao/src/: main.rs
mlpcotacao/src/conexao/: read_file.rs
mlpcotacao/src/mlp/: mlp_cotacao.rs  previsao.rs
mlpcotacao2/: Cargo.toml  README.md
mlpmercadofinanc/: Cargo.toml  README.md
mlpmercadofinanc/dados/: WEGE3.csv  previsoes.db
mlpmercadofinanc/dados/investing/: WEGE3.csv
mlpmercadofinanc/src/: main.rs  main_1.rs  main_2.rs  main_5.rs  main_6.rs  main_8.rs  utils.rs
mlpmercadofinanc/src/conexao/: mlp_cotacao_old_.rs  mod.rs  read_file.rs
mlpmercadofinanc/src/mlp/: common.rs  data_utils.rs  mlp_cotacao.rs  mod.rs  model.rs  predict_lstm.rs  previsao.rs  previsao_lstm.rs  train_lstm.rs
mlpxor/: Cargo.toml  frases.txt
neura3/: Cargo.toml
neural/: Cargo.toml  neural.db
neural2/: Cargo.toml
outros/: Cargo.toml  MSYS2 UCRT64.lnk  README.md  chatp2p.rs  formatting.rs  main.rs  main.toml  match.bat  match.rs  neural.rs  neural1.rs  neural10.rs  neural2.rs  neural3.rs  neural4.rs  neural5.rs  neural6.rs  neural7.rs  neural8.rs  neural9.rs  option.bat  option.rs  search_string.rs  testestr.rs
perceptron/: Cargo.toml  README.md  perceptron.db  training_data.txt
perceptron/src/: main-2.rs  main-3.rs  main.rs
reconhececor/: Cargo.toml  README.md
reconhececor/dados/: color_classifier.json  color_mlp.json
reconhececor/src/: main-001.rs  main-002.rs  main.rs
rust_cuda_example/: Cargo.toml  setup.sh
rust_cuda_example/src/: main.rs
server/: Cargo.toml  README.md
sqliteexemplo/: Cargo.toml  cats.db  my_db.db
sqlitelinux/: Cargo.toml  README.md  my_db.db
sqlitelinux/src/: main.rs
sqlitelinux/src/conexao/: control_cat.rs  control_person.rs  migrationdb.rs
sqlitelinux/src/functions/: janelas.rs  mod.rs
sqlitelinux/src/janelagtk/: janelap.rs  mod.rs
sqlitelinuxbasic/: Cargo.toml  README.md  my_db.db  teste.rs
sqlitewindows/: Cargo.toml  README.md
sqlitewindows/src/: main.rs
sqlitewindows/src/conexao/: migrationdb.rs  mod.rs
sqlitewindows/src/functions/: janelas.rs
tanglecript/: Cargo.toml
tanglecript/src/: main.rs
tanglecript/src/aposta/: gerador.rs  mod.rs
unimatrix/: Cargo.toml  README.md  unimatrix.db
(+70 files in other folders)
