[package]
name = "cnncheckin"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
csv = "1.3"
clap = { version = "4.5.48", features = ["derive"] }
serde = { version = "1.0.227", features = ["derive"] }
serde_json = "1.0.145"
toml = "0.9.7"

# Use compatible version of bincode with burn
bincode = "1.3"

ndarray = { version = "0.15", features = ["serde"] }
ndarray-rand = "0.14"
chrono = { version = "0.4.42", features = ["serde"] }
rand = "0.9.2"
thiserror = "2.0.16"

smartcore = "0.3"
crossbeam = "0.8"

# Use more compatible burn version
burn = { version = "0.13", default-features = false, features = ["std", "ndarray"] }
burn-train = { version = "0.13", optional = true }

plotly = "0.8"
rusqlite = { version = "0.30.0", features = ["bundled"] }
log = "0.4.28"
env_logger = "0.11"
postgres = { version = "0.19.11", features = ["with-chrono-0_4"] }
tokio-postgres = { version = "0.7.14", features = ["with-chrono-0_4"] }
reqwest = { version = "0.12", features = ["blocking"] }

flate2 = "1.0"
rayon = "1.7"
r2d2 = "0.8"
r2d2_postgres = "0.18"
indicatif = "0.17"

sha2 = "0.10"
num_cpus = "1.16"

minifb = "0.25"

tempfile = "3.23.0"

[features]
default = []
train = ["burn-train"]
gpu = ["burn/wgpu"]

[[bin]]
name = "cnncheckin"
path = "src/main.rs"