[package]
name = "estimulo"
version = "0.1.0"
edition = "2021"

#  [dependencies.rusqlite]
# 		version 	= "0.32.1"
#     	features 	= ["bundled", "extra_check", "winsqlite3"]

[dependencies]
	gcc = "0.3.55"
	libsql-rusqlite = "0.32.0"
	libsqlite3-sys = "0.30.1"
	libsqlite3-sys-ic = "0.25.0"
	openssl = "0.10.66"
	rusqlite = { version = "0.32.1", features = ["bundled"] }
	rusqlite-ic = "0.28.1"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


