[package]
name = "estimulo"
version = "0.1.0"
edition = "2021"

#  [dependencies.rusqlite]
# 		version 	= "0.32.1"
#     	features 	= ["bundled", "extra_check", "winsqlite3"]

[dependencies] 
	libsql-rusqlite = "0.32.0"
	libsqlite3-sys = "0.30.1"  
	rusqlite = { version = "0.32.1", features = ["bundled"] } 


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


