[package]
name = "lstm_cnn_predictor"
version = "0.1.0"
edition = "2024"

[dependencies]
    csv = "1.3"
    clap = { version = "4.5", features = ["derive"] }
    serde = { version = "1.0", features = ["derive"] }
    serde_json = "1.0"
    toml = "0.9.2"


    bincode = { version = "2.0.1", features = ["serde"] }

    ndarray = { version = "0.16.1", features = ["serde"] }
    ndarray-rand = "0.15.0"
    #chrono = "0.4"
    chrono = { version = "0.4", features = ["serde"] }
    rand = "0.9.2"
    rand_distr = "0.5.0"
    thiserror = "2.0.12"

    serde_bson = "0.0.1"
    smartcore = "0.4.0"
    crossbeam = "0.8"
    ndarray-stats = "0.6.0"
    # Ensure autodiff feature is enabled
    # burn = { version = "0.18.0", features = ["wgpu","train", "dataset", "ndarray", "autodiff"] }
    burn = { version = "0.18.0", features = ["wgpu", "autodiff", "train"] }

    plotly = "0.13.5"
    rusqlite = "0.37.0"
    burn-train = "0.18.0"
    log = "0.4"
    env_logger = "0.11.8"
    postgres = { version = "0.19.9", features = ["with-serde_json-1"] }
    reqwest = { version = "0.12.22", features = ["blocking"] }
 
    flate2 = "1.0"          # Para compressão
    rayon = "1.7"           # Processamento paralelo
    r2d2 = "0.8"            # Pool de conexões
    r2d2_postgres = "0.18"  # Pool específico para PostgreSQL
    indicatif = "0.18.0"      # Barra de progresso
 
    sha2 = "0.10"
    num_cpus = "1.16"
    # Console colors and formatting
    colored = "2.0"
    [[bin]]
        name = "lstm"
        path = "src/main.rs"
