[package]
name = "lstm_rnn_trainer"
version = "0.1.0"
edition = "2024"

 

[dependencies]
    candle-core = "0.9.1"
    candle-nn = "0.9.1"
    candle-transformers = "0.9.1"
    serde = { version = "1.0", features = ["derive"] }
    serde_json = "1.0"
    toml = "0.9.5"
    tokio = { version = "1.0", features = ["full"] }
    anyhow = "1.0"
    rand = "0.9.2"
    ndarray = "0.16.1"
    ndarray-rand = "0.15.0"
    ndarray-stats = "0.6.0"
    walkdir = "2.0"
    chrono = { version = "0.4", features = ["serde"] }
