[package]
name = "lstmfiletrain"
version = "0.1.0"
edition = "2024"

[dependencies]
    ndarray = { version = "0.16", features = ["serde"] }
    serde = { version = "1.0", features = ["derive"] }
    serde_json = "1.0"
    clap = { version = "4.5", features = ["derive"] }
    
    rand = "0.9.2"
    log = "0.4"
    env_logger = "0.11.8"
     
    #bincode = { version = "2.0.1", features = ["serde"] } 
    #tch = "0.20.0" 
    #chrono = "0.4" 
    rand_distr = "0.5.0"
    thiserror = "2.0.12"
    toml = "0.9.2"
    serde_bson = "0.0.1"
    #smartcore = "0.4.0"
    #crossbeam = "0.8"
    #ndarray-stats = "0.6.0"
    # Ensure autodiff feature is enabled
    # burn = { version = "0.18.0", features = ["wgpu","train", "dataset", "ndarray", "autodiff"] }
    #burn = { version = "0.18.0", features = ["wgpu", "autodiff", "train"] }
    #csv = "1.3"
    #plotly = "0.13.4"
    #rusqlite = "0.37.0"
    #burn-train = "0.18.0"  
    bincode = { version = "2.0.1", features = ["serde"] } 
    #chrono = "0.4"
    chrono = { version = "0.4", features = ["serde"] } 
    smartcore = "0.4.0"
    crossbeam = "0.8"
    ndarray-stats = "0.6.0"
    # Ensure autodiff feature is enabled
    # burn = { version = "0.18.0", features = ["wgpu","train", "dataset", "ndarray", "autodiff"] }
    burn = { version = "0.18.0", features = ["wgpu", "autodiff", "train"] } 
    plotly = "0.13.4"
    reqwest = { version = "0.12.22", features = ["blocking"] }
    rusqlite = { version = "0.37.0", features = ["bundled"] }
    

 
    postgres = { version = "0.19.9", features = ["with-serde_json-1"] }
 

    burn-train = "0.18.0"
 
    
    [[bin]]
    name = "lstm"
    path = "src/main.rs"

 
