[package]
name = "lstmfiletrain"
version = "0.1.0"
edition = "2024"
 

[dependencies]
ndarray = { version = "0.16", features = ["serde"] } # Add serde feature for Array serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.142"
clap = { version = "4.5.42", features = ["derive"] }
rand = "0.9.0"
log = "0.4"
env_logger = "0.11.8"
rand_distr = "0.5.0"
thiserror = "2.0.12"
toml = "0.9.4"
serde_bson = "0.0.1"
bincode = { version = "2.0.1", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
smartcore = "0.4.0"
crossbeam = "0.8"
ndarray-stats = "0.6.0"
burn = { version = "0.18.0", features = ["wgpu", "autodiff", "train"] }
plotly = "0.13.4"
reqwest = { version = "0.12.22", features = ["blocking"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
postgres = { version = "0.19.9", features = ["with-serde_json-1", "with-chrono-0_4"] } # Add with-chrono-0_4
burn-train = "0.18.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[[bin]]
name = "lstm"
path = "src/main.rs"