[package]
name = "lstmrnntrain"
version = "0.1.0"
edition = "2024"
 
authors = ["Your Name <your.email@example.com>"]
description = "Deep Learning training system with LSTM, RNN, MLP, and CNN support"

[dependencies] 
 
    ndarray = { version = "0.16", features = ["serde"] }
    serde = { version = "1.0", features = ["derive"] }
    serde_json = "1.0"
    clap = { version = "4.5", features = ["derive"] }
    rand = "0.9.2"
    log = "0.4"
    env_logger = "0.11"
    rand_distr = "0.5.1"
    thiserror = "2.0.12"
    toml = "0.9.5"
    bincode = { version = "2.0.1", features = ["serde"] }
    chrono = { version = "0.4", features = ["serde"] }
    crossbeam = "0.8"
    ndarray-stats = "0.6"
    plotly = "0.13"
    reqwest = { version = "0.12", features = ["blocking"] }
    rusqlite = { version = "0.37", features = ["bundled"] }
    postgres = { version = "0.19", features = ["with-serde_json-1", "with-chrono-0_4"] }
    rayon = "1.8"

 
 
 

# Database
#postgres = { version = "0.19", features = ["with-chrono"] }

 
 
# Optional: bincode for binary serialization (keeping for future use)
# bincode = "2.0"
 

[[bin]]
    name = "neural-train"
    path = "src/main.rs"

  
[profile.release]
    opt-level = 3
    lto = true
    codegen-units = 1
    panic = "abort" 
    debug = false
      
[profile.dev]
    opt-level = 0
    debug = true
    overflow-checks = true