[package]
	name = "mlp"
	version = "0.1.0"
	edition = "2021"

[dependencies]
	#plotters = "0.3.4"
	#time = "0.3.36"
    rand = "0.9.0"
	thiserror = "2.0.11"
	rand_distr = "0.5.0"
	rusqlite = { version = "0.33.0", features = ["bundled"] }
	toml = "0.8.19"
	encoding = "0.2.33"
	encoding_rs = "0.8.34"
	encoding_rs_io = "0.1.7"
	serde = { version = "1.0", features = ["derive"] }
	serde_json = "1.0"
	libsqlite3-sys = "0.31.0"