[package]
	name = "mlp"
	version = "0.1.0"
	edition = "2021"




[dependencies]
	ndarray = "0.16.1"  # Or the latest version

	plotters = "0.3.4"
	time = "0.3.36"
	rand = "0.9.0"
	thiserror = "2.0.11"
	rand_distr = "0.5.0"
	toml = "0.8.19"
	#encoding = "0.2.33"
	#encoding_rs = "0.8.34"
	#encoding_rs_io = "0.1.7"
	serde = { version = "1.0", features = ["derive"] }
	serde_json = "1.0"
	#libsqlite3-sys = { path = "deps/libsqlite3-sys" }
	#libsqlite3-sys = { path = "/home/junior/Documentos/projetos/rust_app/caminho/para/libsqlite3-sys" }
	#rusqlite = { version = "0.31.0", features = ["bundled"] }
	#libsqlite3-sys = "0.29.0"
	rusqlite = { version = "0.32.0", features = ["bundled"] }

	#[build-dependencies]
	#bindgen = "0.71.1"
