[package]
name = "mlpcotacao"
version = "0.1.0"
edition = "2021"


 authors = ["Júnior NSF"]
[dependencies]
	#ndarray = "0.16.1"  # Or the latest version
	ndarray = { version = "0.16.1", features = ["serde"] }
	#image = "0.25.5"  # Or latest 0.x version
	#plotters = "0.3.4"
	time = "0.3.36"
	rand = "0.9.0"
	thiserror = "2.0.11"
	rand_distr = "0.5.0"
	toml = "0.8.20"
	#encoding = "0.2.33"
	#encoding_rs = "0.8.34"
	#encoding_rs_io = "0.1.7"
	csv = "1.1"
	serde = { version = "1.0", features = ["derive"] }
	serde_json = "1.0"
	#libsqlite3-sys = { path = "deps/libsqlite3-sys" }
	#libsqlite3-sys = { path = "/home/junior/Documentos/projetos/rust_app/caminho/para/libsqlite3-sys" }
	#rusqlite = { version = "0.31.0", features = ["bundled"] }
	#libsqlite3-sys = "0.29.0"
	rusqlite = { version = "0.32.0", features = ["bundled"] }
	serde_bson = "0.0.1" # Or latest 0.x version
    smartcore = "0.4.0"
	crossbeam = "0.8"  # Or latest 0.x version
	chrono = "0.4"
	bincode = "1.3"
	#[build-dependencies]
	#bindgen = "0.71.1"
    #tch = { version = "0.19" } # Removido o recurso "cuda"
	#tch = { version = "0.19", features = ["cuda"] } # Habilita CUDA se disponível
	
 