[package]
name = "mlpmercadofinanc"
version = "0.1.0"
edition = "2021"
authors = ["Júnior NSF"]

[dependencies]
bincode = { version = "2.0.1", features = ["serde"] }
burn = { version = "=0.17.1", features = ["train"] }
burn-autodiff = "=0.17.1"
burn-ndarray = "=0.17.1"
clap = { version = "4.0", features = ["derive"] }
ndarray = { version = "0.16.1", features = ["serde"] }
chrono = "0.4"
rand = "0.9.0"
rand_distr = "0.5.0"
thiserror = "2.0.11"
toml = "0.9.1"
csv = "1.1.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bson = "0.0.1"
smartcore = "0.4.0"
crossbeam = "0.8"
ndarray-stats = "0.6.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }