[package]
name = "mlpmercadofinanc"
version = "0.1.0"
edition = "2021"
authors = ["Júnior NSF"]

[dependencies]
    bincode = { version = "2.0.1", features = ["serde"] }
    clap = { version = "4.0", features = ["derive"] }
    ndarray = { version = "0.16.1", features = ["serde"] }
    chrono = "0.4"
    rand = "0.9.1"
    rand_distr = "0.5.0"
    thiserror = "2.0.12"
    toml = "0.9.2"
    serde_json = "1.0"
    serde_bson = "0.0.1"
    smartcore = "0.4.0"
    crossbeam = "0.8"
    ndarray-stats = "0.6.0"
    burn = { version = "0.18.0", features = ["train", "dataset"] }
    csv = "1.3"
    serde = { version = "1.0", features = ["derive"] }
    plotly = "0.13.4"

    [dependencies.rusqlite]
    version = "0.34.0"
    features = ["bundled"]