[package]
    name = "perceptron"
    version = "0.1.0"
    edition = "2021"

[dependencies]
    rand = "0.8.5"
	[dependencies.rusqlite]
		version 	= "0.32.1"
		features 	= ["bundled"]

	winapi = "0.3.9"
	user32-sys = "0.1.2"
	winsafe = { git = "https://github.com/rodrigocfd/winsafe", features = [] }
