[package]
    name = "reconhececor"
    version = "0.1.0"
    edition = "2021"
    authors = ["Júnior NSF"]

[dependencies]
	#ndarray = "0.16.1"  # Or the latest version
	ndarray = { version = "0.15.4", features = ["serde"] }
	#image = "0.25.5"  # Or latest 0.x version
	#plotters = "0.3.4"
	time = "0.3.36"
	rand = "0.9.0"
	thiserror = "2.0.11"
	rand_distr = "0.5.0"
	toml = "0.8.20"
	#encoding = "0.2.33"
	#encoding_rs = "0.8.34"
	#encoding_rs_io = "0.1.7"
	csv = "1.1"
	serde = { version = "1.0", features = ["derive"] }
	serde_json = "1.0"
	rusqlite = { version = "0.34.0", features = ["bundled"] }
	serde_bson = "0.0.1" # Or latest 0.x version
    smartcore = "0.4.0"
	crossbeam = "0.8"  # Or latest 0.x version
	chrono = "0.4"

	
	
	ndarray-rand = "0.15.0"
	itertools = "0.14.0"