[package]
    name = "sqlitelinux"
    version = "0.1.0"
    edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 
[dependencies]
    gdk = {version = "0.1", package = "gdk4"}
    gtk = { git = "https://github.com/gtk-rs/gtk4-rs.git", package = "gtk4" }
    
	[dependencies.rusqlite]
		version 	= "0.29.0"
    	features 	= ["bundled"]
