[package]
	name 	= "sqlitewindows"
	version = "0.1.0"
	edition = "2021"
	# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
	[dependencies.rusqlite]
		version 	= "0.29.0"
		features 	= ["bundled"]

	winapi = "0.3.9"
	user32-sys = "0.1.2"
	winsafe = { git = "https://github.com/rodrigocfd/winsafe", features = [] }


[dependencies.windows]
	version = "0.43.0"
	features = [
		"Win32_Foundation",
		"Win32_UI_WindowsAndMessaging",
	]