[package]
name = "tanglecript"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

 

[dependencies]
    rand = "0.8.5"
	[dependencies.rusqlite]
		version 	= "0.31.0"
		features 	= ["bundled"]

	winapi = "0.3.9"
	user32-sys = "0.1.2"
	winsafe = { git = "https://github.com/rodrigocfd/winsafe", features = [] }


[dependencies.windows]
	version = "0.54.0"
	features = [
		"Win32_Foundation",
		"Win32_UI_WindowsAndMessaging",
	]